Change toString() (json) method implementation
QADP-61: As a Data Manager I can see the total number of PD coded terms (DVDECOD) within each PD category that have occurred at site across all studies, so that I can monitor which PD terms are most occurring at site.